[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sounds/footstep/Footstep6.wav" type="AudioStream" id=1]
[ext_resource path="res://src/scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://src/nodes/Arm.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sounds/footstep/Footstep2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/screamer.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/lampe.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.503059
height = 1.55438

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.406612, 0.093261, 0.39684 )

[sub_resource type="Animation" id=3]
resource_name = "CameraBalancing"
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "main_foot_step"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.15, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Model/arm:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.1178, -0.323881, -0.101366 ), Vector3( -0.118, -0.195, -0.101 ), Vector3( -0.1178, -0.323881, -0.101366 ) ]
}

[sub_resource type="SphereShape" id=4]
radius = 34.678

[sub_resource type="SphereShape" id=5]
radius = 2.87249

[node name="Spatial" type="KinematicBody" groups=[
"Player",
]]
script = ExtResource( 2 )

[node name="Body_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 1.7, 0 )
shape = SubResource( 1 )

[node name="Feet_CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 2 )

[node name="Rotation_Helper" type="Spatial" parent="."]
transform = Transform( 1, 0.00013537, 0.0002279, -0.000135502, 1, 0.000549712, -0.000227821, -0.000549739, 1, 0, 2.78521, 0 )

[node name="Model" type="Spatial" parent="Rotation_Helper"]

[node name="arm" parent="Rotation_Helper/Model" instance=ExtResource( 3 )]
transform = Transform( -0.368789, -0.000134215, 0.929515, -0.00474612, 0.999986, -0.00173866, -0.929501, -0.00505277, -0.368786, -0.1178, -0.323881, -0.101366 )

[node name="Flashlight" type="SpotLight" parent="Rotation_Helper/Model/arm"]
transform = Transform( -0.332752, -0.00974043, -0.942964, -0.00668296, 0.999947, -0.00797077, 0.942989, 0.0036495, -0.332798, 0.870765, -0.0262871, 0.0910355 )
shadow_enabled = true
spot_range = 20.0
spot_attenuation = 1.3
spot_angle = 40.0

[node name="Camera" type="Camera" parent="Rotation_Helper"]
transform = Transform( 0.999955, -9.10844e-06, -0.00949033, -0.00027261, 0.999559, -0.0296838, 0.00948642, 0.029685, 0.999514, 0, 0, 0 )
current = true

[node name="CameraAnimation" type="AnimationPlayer" parent="Rotation_Helper"]
anims/CameraBalancing = SubResource( 3 )

[node name="EnemyAgroArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="EnemyAgroArea"]
shape = SubResource( 4 )

[node name="ProxyArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ProxyArea"]
shape = SubResource( 5 )

[node name="Footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.097
bus = "footstep"

[node name="Footstep2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "footstep"

[node name="Footstep3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "footstep"

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0
bus = "fx"

[node name="Flashlight_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -7.964
[connection signal="body_entered" from="EnemyAgroArea" to="." method="_on_EnemyAgroArea_body_entered"]
[connection signal="body_exited" from="EnemyAgroArea" to="." method="_on_EnemyAgroArea_body_exited"]
[connection signal="area_entered" from="ProxyArea" to="." method="_on_ProxyArea_area_entered"]
[connection signal="body_entered" from="ProxyArea" to="." method="_on_ProxyArea_body_entered"]
[connection signal="body_exited" from="ProxyArea" to="." method="_on_ProxyArea_body_exited"]
